# ops-blas

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  install_deps.sh
test/: CMakeLists.txt
test/asum/sasum/: CMakeLists.txt  sasum_golden.h  sasum_param.h
test/axpy_ex/: CMakeLists.txt  axpy_ex_golden.h  axpy_ex_param.h
test/axpy_ex/arch35/: axpy_ex_npu_wrapper.h  axpy_ex_test.cpp  axpy_ex_test.csv
test/blasLtMatmul/: CMakeLists.txt  README.md  blasLtMatmul_golden.h  blasLtMatmul_param.h  blasLtMatmul_test.cpp
test/blasLtMatmul/arch35/: blasLtMatmul_npu_wrapper.h  blasLtMatmul_test.cpp  blasLtMatmul_test.csv
test/blasLtMatrixTransform/: CMakeLists.txt  README.md  blasLtMatrixTransform_golden.h  blasLtMatrixTransform_param.h
test/blasLtMatrixTransform/arch35/: blasLtMatrixTransform_npu_wrapper.h  blasLtMatrixTransform_test.cpp  blasLtMatrixTransform_test.csv
test/caxpy/: CMakeLists.txt  caxpy_test.cpp
test/caxpy/arch22/: caxpy_test.cpp
test/cdot/: CMakeLists.txt  README.md  cdot_test.cpp
test/cdot/arch22/: cdot_test.cpp
test/cgemm/: CMakeLists.txt  README.md  cgemm_test.cpp
test/cgemm/arch22/: cgemm_test.cpp
test/cgemm_batched/: CMakeLists.txt  README.md  cgemm_batched_test.cpp  simple_test.cpp
test/cgemm_batched/arch22/: cgemm_batched_test.cpp
test/cgemv/: CMakeLists.txt  cgemv_test.cpp
test/cgemv/arch22/: cgemv_test.cpp
test/cgemv_batched/: CMakeLists.txt  README.md  cgemv_batched_test.cpp
test/cgemv_batched/arch22/: cgemv_batched_test.cpp
test/cgerc/: CMakeLists.txt  README.md  cgerc_test.cpp
test/cgerc/arch22/: cgerc_test.cpp
test/colwise_mul/: CMakeLists.txt  colwise_mul_test.cpp
test/colwise_mul/arch22/: colwise_mul_test.cpp
test/common/: util.h
test/complex_mat_dot/: CMakeLists.txt  README.md  complex_mat_dot_test.cpp
test/complex_mat_dot/arch22/: complex_mat_dot_test.cpp
test/copy/scopy/: CMakeLists.txt  scopy_golden.h  scopy_param.h  scopy_test.cpp
test/cscal/: CMakeLists.txt  README.md  cscal_test.cpp
test/cscal/arch22/: cscal_test.cpp
test/csrot/: CMakeLists.txt  csrot_test.cpp
test/csrot/arch22/: csrot_test.cpp
test/cswap/: CMakeLists.txt  README.md  cswap_test.cpp
test/cswap/arch22/: cswap_test.cpp
test/ctrmv/: CMakeLists.txt  ctrmv_test.cpp
test/ctrmv/arch22/: ctrmv_test.cpp
test/dgmm/sdgmm/: CMakeLists.txt  sdgmm_golden.h  sdgmm_param.h
test/dot/sdot/: sdot_golden.h  sdot_param.h
test/dotex/: dotex_golden.h  dotex_param.h
test/dotex/arch35/: dotex_npu_wrapper.h  dotex_test.cpp  dotex_test.csv
test/frame/: blas_test.h  config.h  csv_loader.h  data.h  device.h  dtype_utils.h  fill.h  gtest.h  test_main.cpp  types.h  verify.h
test/gbmv/: CMakeLists.txt  README.md  gbmv_golden.h  gbmv_perf_test.cpp  gbmv_test.cpp  gbmv_test_utils.h
test/gbmv/arch35/: gbmv_golden.h  gbmv_test.cpp  gbmv_test_utils.h  gbmv_testcases.csv
test/gbmv/sgbmv/: CMakeLists.txt  sgbmv_golden.h  sgbmv_param.h
test/gels_batched/sgels_batched/: CMakeLists.txt  sgels_batched_golden.h  sgels_batched_param.h
test/gemm/gemm_ex/: CMakeLists.txt  gemm_ex_golden.h  gemm_ex_param.h
test/gemm_batched/: gemm_batched_npu_common.h
test/gemm_batched/cgemm_batched/: CMakeLists.txt  cgemm_batched_golden.h  (+1 more)
test/gemm_batched_ex/: CMakeLists.txt  gemm_batched_ex_golden.h  gemm_batched_ex_param.h
test/gemm_grouped_batched/: CMakeLists.txt  gemm_grouped_batched_golden.h  gemm_grouped_batched_param.h
test/gemm_grouped_batched_ex/: CMakeLists.txt  gemm_grouped_batched_ex_golden.h  gemm_grouped_batched_ex_param.h
test/gemv_batched/: CMakeLists.txt  gemv_batched_golden.h  gemv_batched_param.h
test/gemv_strided_batched/: CMakeLists.txt  gemv_strided_batched_golden.h  gemv_strided_batched_param.h
test/getri_batched/: CMakeLists.txt  getri_batched_golden.h  getri_batched_param.h
test/getrs_batched/: CMakeLists.txt  sgetrs_batched_golden.h  sgetrs_batched_param.h
test/iamax/: CMakeLists.txt  README.md  iamax_test.cpp
test/isamax/: CMakeLists.txt  isamax_golden.h  isamax_npu_wrapper.h  isamax_param.h
test/isamin/: CMakeLists.txt  isamin_golden.h  isamin_npu_wrapper.h  isamin_param.h
test/matinv_batched/: CMakeLists.txt  matinv_batched_golden.h  matinv_batched_param.h
test/rotex/: CMakeLists.txt  rotex_golden.h  rotex_param.h
test/sasum/: CMakeLists.txt  sasum_test.cpp
test/saxpy/: CMakeLists.txt  saxpy_golden.h  saxpy_param.h
test/sbmv/: CMakeLists.txt  sbmv_test.cpp
test/scalex/: CMakeLists.txt  scalex_golden.h  scalex_param.h
test/scopy/: README.md  scopy_test.cpp
test/sdot/: CMakeLists.txt  README.md  sdot_golden.h  sdot_param.h  sdot_test.cpp
test/sgemm_ex/: CMakeLists.txt  sgemm_ex_golden.h  sgemm_ex_param.h
test/sger/: CMakeLists.txt  README.md  sger_test.cpp
test/snrm2/: CMakeLists.txt  README.md  snrm2_test.cpp
test/snrm2_ex/: CMakeLists.txt  snrm2_ex_golden.h  snrm2_ex_param.h
test/spmv/: CMakeLists.txt  spmv_test.cpp
test/spr/: CMakeLists.txt  sspr_golden.h  sspr_param.h
test/spr2/: CMakeLists.txt  sspr2_golden.h  sspr2_param.h
test/sscal/: CMakeLists.txt  sscal_test.cpp
test/sspmv/: sspmv_test.cpp
test/sswap/: CMakeLists.txt  README.md  sswap_test.cpp
test/ssyr/: CMakeLists.txt  README.md  ssyr_test.cpp
test/ssyr2/: CMakeLists.txt  README.md  ssyr2_test.cpp
test/stbsv/: CMakeLists.txt  stbsv_golden.h  stbsv_param.h
test/stpttr/: CMakeLists.txt  README.md  stpttr_golden.h
test/strmm/: CMakeLists.txt  README.md  strmm_test.cpp
test/strmv/: CMakeLists.txt  README.md  strmv_test.cpp
test/strsv/: CMakeLists.txt  strsv_test.cpp
test/strttp/: CMakeLists.txt  README.md  strttp_param.h
test/symv/: CMakeLists.txt  README.md  symv_test.cpp
test/syr/: CMakeLists.txt  README.md  syr_a2_test.cpp
test/tbmv/: CMakeLists.txt  README.md  tbmv_test.cpp
test/tpmv/: CMakeLists.txt  README.md  tpmv_test.cpp
test/tpsv/: CMakeLists.txt  tpsv_golden.h
test/tpttr/: CMakeLists.txt  README.md
test/trttp/: CMakeLists.txt  README.md  strttp_test.cpp
test/utils/: cblas_compat.h  dtype_compat.h  error_check.h  golden.h
(+1131 files in other folders)
