if(BUILD_TEST)
    # 支持多算子列表（TEST_NAMES 是分号分隔的 CMake 列表）
    foreach(TEST_NAME ${TEST_NAMES})
        if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${TEST_NAME})
            # 检查当前 SOC 架构下是否有算子源码（arch22/arch35 等子目录或根目录 .cpp）
            set(TEST_HAS_SOURCES FALSE)
            foreach(arch_dir ${SOC_ARCH_DIRS})
                file(GLOB arch_dir_srcs ${CMAKE_SOURCE_DIR}/blas/${TEST_NAME}/${arch_dir}/*.cpp)
                if(arch_dir_srcs)
                    set(TEST_HAS_SOURCES TRUE)
                    break()
                endif()
            endforeach()
            if(NOT TEST_HAS_SOURCES)
                file(GLOB base_srcs ${CMAKE_SOURCE_DIR}/blas/${TEST_NAME}/*.cpp)
                if(NOT base_srcs)
                    message(STATUS "Skipping test '${TEST_NAME}' (no sources for ${SOC_VERSION})")
                    continue()
                endif()
            endif()
            add_subdirectory(${TEST_NAME})
        else()
            message(FATAL_ERROR "TEST directory not found: ${TEST_NAME}")
        endif()
    endforeach()
endif()